worked on the appointment.js
