# swagger.json
@@ -611,6 +611,32 @@
           }
         }
       },
+      "/api/appointment/byPatient/{id}": {
+        "get": {
+          "summary": "Get Appointment by Patient Id",
+          "description": "Get Appointment  by Patient Id",
+          "tags": ["Appointments"],
+          "security":[
+            {
+          "Bearer":[]
+             }
+  ],
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "description": "ID of the patient to retrieve",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Appointment Details"
+            }
+          }
+        }
+      },
       "/api/chat/{chatId}": {
         "get": {
           "summary": "Get Chats by Id",
